Create pancake recipe page and update homepage
Create carrot apple pancake recipe page with image and update the
homepage with link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        
+        <a href="recipes/carrot-apple-pancakes.html">Carrot Apple Pancakes</a>
     </body>
 </html>
