--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/carrot-apple-pancakes.html">Carrot Apple Pancakes</a>
+        <ul>
+            <li><a href="recipes/carrot-apple-pancakes.html">Carrot Apple Pancakes</a></li>
+            <li><a href="recipes/unbelievable-chicken.html">Unbelievable Chicken</a></li>
+        </ul>
     </body>
 </html>
