Added style to recipe homepage
Added style to recipe homepage to add "flava"

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
+        <h1 class="title1">Odin Recipes</h1>
+        <ul class="recipe_list">
             <li><a href="recipes/carrot-apple-pancakes.html">Carrot Apple Pancakes</a></li>
             <li><a href="recipes/unbelievable-chicken.html">Unbelievable Chicken</a></li>
             <li><a href="recipes/apple-cider-hawaiian-roll-donuts.html">
